[tool.poetry]
name = "http-home"
version = "0.1.0"
description = ""
authors = ["Yuuki Takahashi <20282867+yktakaha4@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
eventlet = "^0.33.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
